fix: header nav icons alignment, logo redirect

--- a/src/components/custom/Layout/styles.module.scss
+++ b/src/components/custom/Layout/styles.module.scss
@@ -139,6 +139,13 @@
   margin-bottom: 1rem;
 }
 
+.navLink {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .navBtn {
   background-color: transparent;
   border: none;
